--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <main>
+	<app-shell-particles></app-shell-particles>
 	<div class="dashboard-ux" dir="rtl">
 		<div class="router-container">
 			<router-outlet #routerOutlet="outlet"></router-outlet>
