--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -101,3 +101,10 @@ html[dir='ltr'] {
 		}
 	}
 }
+
+.dashboard-ux {
+	position: relative;
+	z-index: 10;         /* بالاتر از particles */
+	min-height: 100vh;
+	width: 100%;
+}
