--- a/src/app/home-landing/home-landing.component.html
+++ b/src/app/home-landing/home-landing.component.html
@@ -2,16 +2,17 @@
 <main id="main">
 	<app-shell-hero></app-shell-hero>
 	<app-shell-social-prof></app-shell-social-prof>
-<!--	<app-shell-feature-grid></app-shell-feature-grid>-->
-<!--	<app-live-insights></app-live-insights>-->
-<!--	<app-shell-geo-pulse></app-shell-geo-pulse>-->
+	<app-shell-feature-grid></app-shell-feature-grid>
+	<app-live-insights></app-live-insights>
+	<app-shell-geo-pulse></app-shell-geo-pulse>
+
 <!--	<app-shell-table-data></app-shell-table-data>-->
-<!--	<app-shell-use-case></app-shell-use-case>-->
-<!--	<app-shell-how-it-work></app-shell-how-it-work>-->
-<!--	<app-shell-testimonials></app-shell-testimonials>-->
-<!--	<app-shell-pricing></app-shell-pricing>-->
-<!--	<app-shell-faq></app-shell-faq>-->
-<!--	<app-shell-end-cta></app-shell-end-cta>-->
+	<app-shell-use-case></app-shell-use-case>
+	<app-shell-how-it-work></app-shell-how-it-work>
+	<app-shell-testimonials></app-shell-testimonials>
+	<app-shell-pricing></app-shell-pricing>
+	<app-shell-faq></app-shell-faq>
+	<app-shell-end-cta></app-shell-end-cta>
 </main>
 <app-shell-footer></app-shell-footer>
 <app-back-to-top></app-back-to-top>
