--- a/src/app/home-landing/home-landing.component.scss
+++ b/src/app/home-landing/home-landing.component.scss
@@ -119,8 +119,8 @@
 	color: #e7e7ff;
 
 	.glass {
-		background: rgba(255, 255, 255, .08);
-		border: 1px solid rgba(255, 255, 255, .15);
+		background: rgba(255, 255, 255, .08) !important;
+		border: 1px solid rgba(255, 255, 255, .15) !important;
 		backdrop-filter: blur(10px);
 	}
 
