--- a/src/app/shell/shell-feature-grid/shell-feature-grid.component.html
+++ b/src/app/shell/shell-feature-grid/shell-feature-grid.component.html
@@ -1,18 +1,54 @@
-<section id="features" revealOnScroll>
+<section id="features" class="section-features" revealOnScroll>
 	<div class="container-xl">
-		<h2 class="mb-4">چرا <span class="text-gold">دیتا خوانا</span>؟</h2>
+
+		<div class="features-header text-center mb-4">
+
+			<h2 class="mb-1">
+				چرا
+				<span class="text-gold">دیتا خوانا</span>؟
+			</h2>
+			<p class="text-secondary mb-2">
+				از جمع‌آوری تا بینش نهایی، یک مسیر یکپارچه و خوانا
+			</p>
+			<div class="mb-4 hero-badge d-inline-flex mx-auto align-items-center gap-2">
+<!--				<span class="hero-badge-dot"></span>-->
+				<span class="hero-badge-text">
+					<i class="fas fa-star"></i>
+					طراحی شده برای تیم‌های وسواسی روی دیتـا
+				</span>
+				<!--				<span class="hero-badge-pill">قابل دسترس</span>-->
+			</div>
+		</div>
+
 		<div class="row g-3">
 			<div class="col-12 col-md-6 col-lg-3" *ngFor="let f of features">
-				<p-card class="glass card-glass h-100">
-					<ng-template pTemplate="header">
-						<div class="d-inline-flex align-items-center justify-content-center grad-gold rounded-circle" style="width:48px;height:48px">
-							<i [class]="f.icon" style="color:#111"></i>
+				<div class="feature-card h-100">
+					<div class="p-3 pb-4 pt-2">
+						<div class="feature-icon-wrapper d-flex pb-2">
+							<div class="feature-icon mx-auto">
+								<i [class]="f.icon"></i>
+							</div>
 						</div>
-					</ng-template>
-					<h3 class="mt-3">{{f.title}}</h3>
-					<p class="text-secondary">{{f.desc}}</p>
-					<button pButton label="بیشتر بدانید" class="p-button-text text-gold"></button>
-				</p-card>
+
+						<div class="feature-body">
+							<h3 class="feature-title mt-2 mb-1">{{ f.title }}</h3>
+							<p class="feature-desc text-secondary mb-3">
+								{{ f.desc }}
+							</p>
+						</div>
+
+						<div class="d-flex justify-content-end">
+							<button
+								pButton
+								label="بیشتر بدانید"
+								icon="fas fa-arrow-left"
+								iconPos="right"
+								severity="info"
+								class="p-button-text feature-link-btn text-gold">
+							</button>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
